--- a/package.json
+++ b/package.json
@@ -1,15 +1,32 @@
 {
   "name": "code-snippet-manager",
-  "productName": "Code Snippet Manager",
+  "productName": "code-snippet-manager",
   "version": "1.0.0",
-  "description": "an app to manage your code snippets",
-  "main": "main.js",
+  "description": "My Electron application description",
+  "main": "src/index.js",
   "scripts": {
-    "start": "electron ."
+    "start": "electron-forge start",
+    "package": "electron-forge package",
+    "make": "electron-forge make",
+    "publish": "electron-forge publish",
+    "lint": "echo \"No linting configured\""
   },
-  "author": "Guilliano van Dinther",
-  "license": "ISC",
+  "keywords": [],
+  "author": {
+    "name": "Guilliano van Dinther",
+    "email": "guilliano.vandinther@ictmbo.nl"
+  },
+  "license": "MIT",
   "dependencies": {
-    "electron": "^29.0.0"
+    "electron-squirrel-startup": "^1.0.0"
+  },
+  "devDependencies": {
+    "@electron-forge/cli": "^7.2.0",
+    "@electron-forge/maker-deb": "^7.2.0",
+    "@electron-forge/maker-rpm": "^7.2.0",
+    "@electron-forge/maker-squirrel": "^7.2.0",
+    "@electron-forge/maker-zip": "^7.2.0",
+    "@electron-forge/plugin-auto-unpack-natives": "^7.2.0",
+    "electron": "29.0.0"
   }
 }
