--- a/package.json
+++ b/package.json
@@ -13,12 +13,12 @@
   },
   "keywords": [],
   "author": {
-    "name": "Guilliano van Dinther",
+    "name": "Level 4",
     "email": "guilliano.vandinther@ictmbo.nl"
   },
   "license": "MIT",
   "dependencies": {
-    "electron-squirrel-startup": "^1.0.0"
+    "electron-squirrel-startup": "^1.0.1"
   },
   "devDependencies": {
     "@electron-forge/cli": "^7.2.0",
